# reflow-oven

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Makefile  README.md
firmware/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/src/: led.rs  main.rs  pid.rs  profile.rs  sensor.rs  ssr.rs  web.rs
