[package]
name = "reflow-oven"
version = "0.1.0"
edition = "2021"
license = "CERN-OHL-P-2.0"

[dependencies]
esp-idf-svc = { version = "0.52", features = ["binstart"] }
esp-idf-hal = { version = "0.46", features = ["rmt-legacy"] }
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embuild = "0.33"
